2000-08-27  OKUJI Yoshinori  <okuji@gnu.org>

	Preserve a magic number used by Windows NT in a MBR. Shit!
	Reported by Khimenko Victor.
	
	* stage1/stage1.h (STAGE1_WINDOWS_NT_MAGIC): New macro.
	* stage1/stage1.S (copy_buffer): Use pusha and popa, instead of
	pushing/poping %cx and %si separately, to reduce the code size.
	(nt_magic): New label. Set the offset to _start plus
	STAGE1_WINDOWS_NT_MAGIC
	(part_start): New label.
	* stage2/builtins.c (install_func): If DEST_DRIVE is a hard
	disk, copy the possible partition table and Windows NT magic to
	STAGE1_BUFFER from OLD_SECT.
	
2000-08-26  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/char_io.c (translate_keycode) [SUPPORT_SERIAL]: Don't
	drain the input buffer, since that was irritating.
	
2000-08-26  OKUJI Yoshinori  <okuji@gnu.org>

	Don't save/restore fragile registers unnecessarily.
	
	* stage2/asm.S [!STAGE1_5] (track_int13): Don't save/restore
	%ecx, %edx, or %eax.
	[!STAGE1_5] (set_int13_handler): Likewise.
	(biosdisk_int13_extensions): Likewise.
	(biosdisk_standard): Likewise.
	(check_int13_extensions): Likewise.
	(get_diskinfo_int13_extensions): Likewise.
	(get_diskinfo_standard): Likewise.
	(get_diskinfo_floppy): Likewise.
	[!STAGE1_5] (get_eisamemsize): Likewise.
	[!STAGE1_5] (get_mmap_entry): Likewise.
	[!STAGE1_5] (console_cls): Likewise.
	[!STAGE1_5] (nocursor): Likewise.
	[!STAGE1_5] (console_getxy): Likewise.
	[!STAGE1_5] (console_gotoxy): Likewise.
	[!STAGE1_5] (set_attrib): Likewise.
	[!STAGE1_5] (getrtsecs): Likewise.
	[!STAGE1_5] (currticks): Likewise, and don't zero %eax
	explicitly, since prot_to_real does that.
	
2000-08-25  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/char_io.c [!STAGE1_5] (translate_keycode): New
	function. The serial part is stolen from the patch by Christoph
	Plattner.
	[!STAGE1_5] (get_cmdline): Call translate_keycode instead of
	translating special key codes into ASCII characters by itself.
	* stage2/stage2.c (run_menu): Wrap getkey with the macro